--- a/public/less/theme/helpers/_misc.less
+++ b/public/less/theme/helpers/_misc.less
@@ -196,6 +196,9 @@
 			}
 		}
 	}
+	.signup-container{
+		align-items: flex-start;
+	}
 }
 
 
@@ -253,6 +256,7 @@
 		margin-bottom: -20px;
 	}
 }
+
 
 
 
